Update index.html and style.css
The content of these files is based on the practice exercise by
fdoflorenzano.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset='utf-8'>
+        <title>bruh's webpage</title>
+        <!-- Link para Google Font -->
+        <link href="style.css" rel="stylesheet" type="text/css">
+    </head>
+
+  <body>
+      <div id="sider">
+        <img id="foto-perfil" width="150px" height="150px" src="profile_pic.png"/>
+        <h3>Tu nombre</h3>
+        <p>Correo: <span class="info-personal">bruh@uc.cl</span></p>
+        <p>Teléfono: <span class="info-personal">133</span></p>
+        <p>GitHub: <a class="info-personal" href="https://github.com/MatiasDuhalde">@MatiasDuhalde</a></p>
+        <p>El señor de la nocheeeeee.</p>
+      </div>
+      <div id="main-container">
+          <div class="seccion" id="intereses">
+                <h4>Intereses</h4>
+                <ul>
+                    <li>Money</li>
+                </ul>
+          </div>
+          <div class="seccion" id="educacion">
+                <h4>Educación</h4>
+                <ul>
+                    <li>Instituto Miguel León Prado (2006 - 2017)</li>
+                    <li>Universidad Católica, Ingeniería Civil (2018 - )</li>
+                </ul>
+          </div>
+          <div class="seccion" id="cursos">
+                <h4>Cursos realizados</h4>
+                <div class="curso">
+                    <h5>IIC1103 - Introducción a la Programación</h5>
+                    <p>Python</p>
+                </div>
+                <div class="curso">
+                    <h5>IIC1005 - Computación: Ciencia y Tecnología del Mundo Digital</h5>
+                    <p>Bash, HTML, CSS, JavaScript</p>
+                </div>
+          </div>
+      </div>
+  </body>
+</html>
